--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -14,6 +14,8 @@ $text-header1-lineheight: 2em;
 $text-header2-lineheight: 1.5em;
 $text-blockquote-lineheight: 2em;
 
+$text-grid-padding: 1em;
+
 // Colors
 $color1: #37393A;
 $color2: #7DD1D1;
