--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -90,6 +90,10 @@ body {
 
 
 
+figure {
+  margin: 0; padding: 0;
+}
+
 
 
 
